    appropriate radio button in showTest if the test already has a result set
    rather than just defaulting to skip always (LP: #1181952)
  * jobs/touchpad.txt.in - Remove the requires line for touch_mode in
    touchpad/horizontal and touchpad/vertical so that those tests will
    at least run on those systems where they are supposed to (LP: #1184882)

  [ Daniel Manrique ]
  * jobs/stress.txt.in: fixed a few inconsistent invocations of sleep_test.

  [ Sylvain Pineau ]
  * jobs/resource.txt.in: updated version of the package resource job command
    supporting both precise and newer releases (LP: #1184197)
  * scripts/audio_settings: Use the new pactl parser to guess the right profile
    to select for HDMI / DisplayPort tests.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:42 +0100

checkbox (0.16.3) saucy; urgency=low

  [ Sylvain Pineau ]
  * jobs/info.txt.in, scripts/efi_resource: parse the kern.log backups too.
  * scripts/gpu_test, jobs/suspend.txt.in: Call firefox instead of the default
    browser.

  [ Daniel Manrique ]
  * Expanded optical_drive resource command so it correctly handles systems
    with no optical drive (LP: #1182489)
  * Added missing plugin files to po/POTFILES.in so their strings are
    translatable (LP: #1183271)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:37 +0100

checkbox (0.16.2) saucy; urgency=low

  [ Alberto Milone ]
  * scripts/graphics_stress_test, scripts/rotation_test: make sure to
    always reset the "screen" variable. Somehow the NVIDIA driver manages
    to make it unusable after the first time. (LP: #1172667)

  [ Brendan Donegan ]
  * checkbox/parsers/submission.py - publish kernel-release information to
    interested parties.

  [ Daniel Manrique ]
  * Ensured that button strings from the "continue" dialog are translatable
    (LP: #1176695) 
  
  [ Jeff Lane ]
  * checkbox/parsers/cpuinfo.py - split on first instance of ':' in cpuinfo